<resources>
    <string name="app_name">IntuDock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_warehouse">Select a Warehouse</string>
    <string name="hint_search">Search</string>
    <string name="total_docks">Total Docks</string>
    <string name="assigned_transactions">Assigned Transactions</string>
    <string name="open_transactions">Open Transactions</string>
    <string name="cancel">Cancel</string>
    <string name="schedule">Schedule</string>
    <string name="dock">Dock</string>
    <string name="slot">Slot</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tile_view">Tile View</string>
    <string name="calendar_view">Calendar View</string>

    <string name="error">Something Went Wrong</string>
    <string name="prg_dial_pleaseWait">Please Wait</string>
</resources>
