<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect_white"
    android:elevation="5dp"
    android:layout_margin="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_warehouse">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/left_rounded_rect_purple">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tv_warehouse_id"
                    android:gravity="center"
                    android:id="@+id/tv_warehouse_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/tv_warehouse_location"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv_location"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_weight="2.5">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/ll_text">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_gravity="start"
                        android:textAlignment="center"
                        android:textSize="@dimen/tv_total_docks"
                        android:text="@string/total_docks"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_gravity="start"
                        android:textAlignment="center"
                        android:textSize="@dimen/tv_total_docks"
                        android:text="@string/assigned_transactions"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_gravity="start"
                        android:textAlignment="center"
                        android:textSize="@dimen/tv_total_docks"
                        android:text="@string/open_transactions"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/ll_text">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple"
                        android:layout_gravity="start"
                        android:textSize="@dimen/tv_total_docks"
                        android:id="@+id/tv_total_docks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green"
                        android:layout_gravity="start"
                        android:id="@+id/tv_assigned_transactions"
                        android:textSize="@dimen/tv_total_docks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:layout_gravity="start"
                        android:textAlignment="center"
                        android:id="@+id/tv_open_transactions"
                        android:textSize="@dimen/tv_total_docks" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>