<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Spinner
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_city"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_city"
        android:layout_marginStart="30dp"
        android:textSize="@dimen/select_warehouse"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/text_warehouse"
        android:id="@+id/txt_select"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="225dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:id="@+id/spinner_warehouse"
            android:backgroundTint="@color/blue">
        </Spinner>

        <RelativeLayout
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/circle_white"
            android:elevation="2dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/rl_icon_date">

            <ImageButton
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_date"
                android:id="@+id/ib_calendar"/>

        </RelativeLayout>

    </RelativeLayout>

    <devs.mulham.horizontalcalendar.HorizontalCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:textColorNormal="@color/black"
        app:textColorSelected="@color/black"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/ib_calendar"
        android:elevation="0dp"
        app:selectorColor="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_rect_dark_orange"
            android:textColor="@color/white"
            android:text="@string/tile_view"
            android:gravity="center"
            android:id="@+id/tv_tile_view"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_rect_light_orange"
            android:textColor="@color/dark_orange"
            android:layout_marginLeft="50dp"
            android:text="@string/calendar_view"
            android:visibility="visible"
            android:gravity="center"
            android:id="@+id/tv_calendar_view"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_time_period"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Required time period"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/tv_total_docks"
            />

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_rect_purple"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle_white"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:id="@+id/rl_minus">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_minus" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 hrs"
                android:id="@+id/tv_slot_duration"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="@dimen/tv_total_docks"                />

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle_white"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:id="@+id/rl_plus">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_plus" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ll_buttons"
        android:id="@+id/swipe_refresh_docks">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_docks"
            android:visibility="visible">
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.cleveroad.adaptivetablelayout.AdaptiveTableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ll_buttons"
        android:visibility="gone"
        android:background="@color/table_view_background"
        app:cellMargin="0.5dp"
        app:fixedHeaders="true"
        app:solidRowHeaders="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/ll_buttons"
        android:src="@drawable/icon_error"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:id="@+id/iv_no_data"
        />


</LinearLayout>